# dovetail

./: .dockerignore  .gitignore  .ocamlformat  CLAUDE.md  Dockerfile  README.md  dovetail  dovetail.opam  dune-project
.claude/: settings.json
.github/workflows/: ci.yml
docs/: README.md  architecture.md  dune-watcher.md  literals-as-a-ladder.md  query-language-data-definition.md  query-language-expressions.md  query-language-pipeline-operators.md  query-language-tutorial.md  query-language.md  sub-library-dependencies.md  type-ladder.md  type-system.md  ubiquitous-language.md
docs/archive/: ddl-design.md  dml-design.md  library-structure.md  literals-as-a-ladder.md  post-slice-11-review.md
docs/design/: architecture.md  dml-design.md  ir-types.md  literals-as-a-ladder.md  type-ladder.md  type-system.md
docs/internals/: architecture.md  executor.md  optimization.md  query-lifecycle.md  sql-frontend.md  storage.md  ubiquitous-language.md
docs/plans/: 00-initial-plan.md  01-initial-plan.md  01-scan-a-table.md  01-slice-1-scan-a-table.md  02-restriction.md  02-slice-1-scan-a-table.md  03-projection.md  03-slice-2-restriction.md  03-slice-2-selection.md  03-slice-3-projection.md  04-cross-product.md  04-slice-4-cross-product.md  05-inner-join.md  05-slice-5-inner-join.md  06-slice-6-streaming-cps-executor.md  06-streaming-cps-executor.md  07-expression-language.md  07-slice-7-expression-language.md  08-primary-key-point-lookup.md  08-slice-8-primary-key-point-lookup.md  08-slice-8-primary-key-range-scans.md  09-indexed-nested-loop-join.md  09-slice-9-indexed-nested-loop-join.md  10-query-language-documentation.md  10-slice-10-query-language-documentation.md  11-insert.md  11-slice-11-insert.md  12-list-and-drop-tables.md  12-slice-12-list-and-drop-tables.md  13-ddl-and-library-prep.md  13-slice-13-ddl-and-library-prep.md  14-describe-and-create-table.md  14-slice-14-describe-and-create-table.md  15-retire-fixture.md  15-slice-15-retire-fixture.md  16-full-sub-library-setup.md  16-slice-16-full-sub-library-setup.md  17-ladder-framework.md  17-slice-17-ladder-framework.md  18-scalar-and-value-rename.md  (+24 more)
docs/reference/: README.md  bool.md  catalog-type.md  column-references.md  comparisons.md  create-table.md  cross.md  expressions.md  join.md  literals.md  parentheses.md  pipeline-operators.md  precedence.md  project.md  projections.md  relation-reference.md  relation-type.md  restrict.md  row-literal.md  scalar-literal.md  tables.md  unqualify.md
docs/reviews/: post-slice-11-review.md
docs/tutorial/: README.md  sql.md  tables.md  walkthrough.md
lib/: ast.ml  ast.mli  catalog.ml  catalog.mli  cli.ml  cli.mli  ddl.ml  ddl.mli  ddl_executor.ml  ddl_executor.mli  demo_data.ml  demo_data.mli  dune  encoding.ml  encoding.mli  eval.ml  eval.mli  expression.ml  expression.mli  fixture.ml  fixture.mli  logical.ml  logical.mli  lower.ml  lower.mli  parser.ml  parser.mli  physical.ml  physical.mli  predicate.ml  predicate.mli  projection.ml  projection.mli  relation.ml  relation.mli  relation_literal.ml  relation_literal.mli  repl.ml  repl.mli  row_codec.ml  (+9 more)
lib/core/: catalog.ml  catalog.mli  dune  expression.ml  expression.mli  relation.ml  relation.mli  relation_literal.ml  relation_literal.mli  row.ml  row.mli  scalar.ml  scalar.mli  schema.ml  schema.mli  term.ml  term.mli  value.ml  value.mli
lib/ddl/: dune  format.ml  format.mli  statement.ml  statement.mli
lib/execution/: ddl_executor.ml  ddl_executor.mli  dune  eval.ml  (+45 more)
scripts/: wait-for-watcher.sh
test/: doctest.ml  dune  test_catalog.ml  test_cli.ml  test_ddl.ml  test_ddl_executor.ml  test_ddl_roundtrip.ml  test_demo_data.ml  test_doctest.ml  test_documentation.ml  test_dovetail.ml  test_encoding.ml  test_eval.ml  test_eval_cross_product.ml  test_eval_filter.ml  test_eval_full_scan.ml  test_eval_index_lookup.ml  test_eval_indexed_nested_loop_join.ml  test_eval_insert.ml  test_eval_nested_loop_join.ml  test_eval_project.ml  test_eval_relation_literal.ml  test_expression.ml  test_expression_format.ml  test_expression_parser.ml  test_fixture.ml  test_helpers.ml  test_logical.ml  test_lower.ml  test_parser.ml  test_physical.ml  test_pipeline.ml  test_predicate.ml  test_projection.ml  test_relation.ml  test_relation_literal.ml  test_repl.ml  test_row_codec.ml  test_schema.ml  test_statement.ml  (+5 more)
test/core/: dune  test_catalog.ml  test_expression.ml  test_expression_format.ml  test_relation.ml  test_relation_literal.ml  test_row.ml  test_scalar.ml  test_schema.ml  test_term.ml
test/ddl/: dune  test_format.ml  test_statement.ml
test/execution/: dune  test_ddl_executor.ml  test_eval_catalog_source.ml  test_eval_create_table_empty.ml  test_eval_create_table_seeded.ml  test_eval_cross_product.ml  test_eval_drop_table.ml  test_eval_filter.ml  test_eval_full_scan.ml  test_eval_index_lookup.ml  test_eval_indexed_nested_loop_join.ml  test_eval_insert.ml  test_eval_nested_loop_join.ml  test_eval_project.ml  test_eval_relation_literal.ml  test_eval_row_literal.ml  test_eval_scalar_literal.ml  test_eval_tables.ml  test_eval_type_op.ml  test_eval_unqualify.ml
test/frontend/: dune  test_cli.ml  test_repl.ml  test_sql_table.ml
test/helpers/: dune  fixture.ml  fixture.mli  test_helpers.ml
test/integration/: doctest.ml  dune  test_ddl_roundtrip.ml  test_doctest.ml  test_documentation.ml  test_dovetail.ml  test_pipeline.ml
test/plan/: dune  test_logical.ml  test_physical.ml  test_physical_kind_of.ml  test_projection.ml  test_translate.ml  test_translate_index_lookup.ml  test_translate_indexed_nested_loop_join.ml  test_typecheck.ml
test/storage/: dune  test_catalog.ml  test_encoding.ml  test_row_codec.ml  test_storage.ml
test/surface_ra/: dune  test_expression_parser.ml  test_lower.ml  test_parser.ml  test_scalar_roundtrip.ml  test_type_expression_parser.ml
test/surface_sql/: dune  test_lower.ml  test_parser.ml
(+65 files in other folders)
