(tests
 (names
  test_dovetail
  test_storage
  test_catalog
  test_cli
  test_encoding
  test_fixture
  test_schema
  test_value
  test_relation
  test_eval_full_scan
  test_eval_filter
  test_eval_project
  test_eval_cross_product
  test_eval_nested_loop_join
  test_eval_index_lookup
  test_eval_indexed_nested_loop_join
  test_relation_literal
  test_eval_relation_literal
  test_eval_insert
  test_row_codec
  test_translate
  test_translate_index_lookup
  test_translate_indexed_nested_loop_join
  test_logical
  test_lower
  test_parser
  test_physical
  test_pipeline
  test_expression
  test_expression_format
  test_expression_parser
  test_projection
  test_repl
  test_statement
  test_ddl_executor
  test_doctest
  test_documentation)
 (libraries alcotest dovetail unix)
 (deps
  ../bin/main.exe
  ../docs/query-language.md
  ../docs/query-language-tutorial.md
  ../docs/query-language-pipeline-operators.md
  ../docs/query-language-expressions.md
  ../docs/query-language-data-definition.md
  ../README.md))
