(tests
 (names
  test_dovetail
  test_cli
  test_eval_full_scan
  test_eval_filter
  test_eval_project
  test_eval_cross_product
  test_eval_nested_loop_join
  test_eval_index_lookup
  test_eval_indexed_nested_loop_join
  test_eval_relation_literal
  test_eval_insert
  test_lower
  test_parser
  test_pipeline
  test_expression_parser
  test_repl
  test_ddl_executor
  test_ddl_roundtrip
  test_doctest
  test_documentation
  test_demo_data)
 (libraries
  alcotest
  dovetail
  dovetail.core
  dovetail.ddl
  dovetail.storage
  dovetail.plan
  dovetail.surface_ra
  test_helpers
  unix)
 (deps
  ../bin/main.exe
  ../docs/query-language.md
  ../docs/query-language-tutorial.md
  ../docs/query-language-pipeline-operators.md
  ../docs/query-language-expressions.md
  ../docs/query-language-data-definition.md
  ../README.md))
