(tests
 (names
  test_dovetail
  test_pipeline
  test_ddl_roundtrip
  test_doctest
  test_documentation)
 (libraries
  alcotest
  dovetail.core
  dovetail.ddl
  dovetail.storage
  dovetail.plan
  dovetail.surface_ra
  dovetail.execution
  dovetail.frontend
  test_helpers
  unix)
 (deps
  ../bin/main.exe
  ../docs/query-language.md
  ../docs/query-language-tutorial.md
  ../docs/query-language-pipeline-operators.md
  ../docs/query-language-expressions.md
  ../docs/query-language-data-definition.md
  ../README.md))
