(tests
 (names
  test_eval_full_scan
  test_eval_filter
  test_eval_project
  test_eval_cross_product
  test_eval_nested_loop_join
  test_eval_index_lookup
  test_eval_indexed_nested_loop_join
  test_eval_relation_literal
  test_eval_insert
  test_eval_type_op
  test_eval_scalar_literal
  test_ddl_executor)
 (libraries
  alcotest
  dovetail.core
  dovetail.storage
  dovetail.plan
  dovetail.ddl
  dovetail.surface_ra
  dovetail.execution
  test_helpers))
