(tests
 (names
  test_pipeline
  test_dovetail
  test_documentation
  test_doctest)
 (libraries
  alcotest
  dovetail.core
  dovetail.storage
  dovetail.plan
  dovetail.surface_ra
  dovetail.execution
  dovetail.frontend
  test_helpers)
 (deps
  ../../bin/main.exe
  ../../docs/tutorial/README.md
  ../../docs/tutorial/walkthrough.md
  ../../docs/query-language-pipeline-operators.md
  ../../docs/query-language-expressions.md
  ../../README.md))
