(tests
 (names
  test_pipeline
  test_dovetail
  test_documentation
  test_doctest)
 (libraries
  alcotest
  dovetail.core
  dovetail.storage
  dovetail.plan
  dovetail.surface_ra
  dovetail.surface_sql
  dovetail.execution
  dovetail.frontend
  test_helpers)
 (deps
  ../../bin/main.exe
  (glob_files ../../docs/tutorial/*.md)
  (glob_files ../../docs/reference/ra/*.md)
  ../../README.md))
