(tests
 (names
  test_logical
  test_physical
  test_physical_kind_of
  test_projection
  test_translate
  test_translate_index_lookup
  test_translate_indexed_nested_loop_join
  test_typecheck)
 (libraries
  alcotest
  dovetail.core
  dovetail.storage
  dovetail.plan
  dovetail.execution
  test_helpers))
